+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.7 alpha 3?
=================================

*Release date: XXXX-XX-XX*

Core and Builtins
-----------------

- Issue #7622: Improve the split(), rsplit(), splitlines() and replace()
  methods of bytes, bytearray and unicode objects by using a common
  implementation based on stringlib's fast search.  Patch by Florent Xicluna.

- Issue #7632: Fix various str -> float conversion bugs present in 2.7
  alpha 2, including: (1) a serious 'wrong output' bug that could
  occur for long (> 40 digit) input strings, (2) a crash in dtoa.c
  that occurred in debug builds when parsing certain long numeric
  strings corresponding to subnormal values, and (3) a number of flaws
  that could lead to incorrectly rounded results.

- Issue #7319, #7770: Silence DeprecationWarning by default when -3 is not
  used.

- Issue #2335: Backport set literals syntax from Python 3.x.

- Issue #2333: Backport set and dict comprehensions syntax from Python 3.x.

- Issue #1967: Backport dictionary views from Python 3.x.


Library
-------

- Issue #1670765: Prevent email.generator.Generator from re-wrapping
  headers in multipart/signed MIME parts, which fixes one of the sources of
  invalid modifications to such parts by Generator.

- Issue #7701: Fix crash in binascii.b2a_uu() in debug mode when given a
  1-byte argument.  Patch by Victor Stinner.

- Issue #3299: Fix possible crash in the _sre module when given bad
  argument values in debug mode.  Patch by Victor Stinner.

- Issue #7703: Add support for the new buffer API to functions of the
  binascii module.  Backported from py3k by Florent Xicluna, with some
  additional tests.

- Issue #2846: Add support for gzip.GzipFile reading zero-padded files.
  Patch by Brian Curtin.

- Issue #5827: Make sure that normpath preserves unicode.  Initial patch
  by Matt Giuca.
